--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
 }
 
 body{
-    background-image: url(../vanilla-javaScript-budget-App/image/background.jpeg);
+    /* background-image: url(./image/background.jpeg);
+    object-fit: cover;
+    background-size: cover; */
+    background-color: #000 !important;
     font-family: 'Gilroy';
 }
 
@@ -38,38 +41,40 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-.container {
+/* .budget {
     
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
   border-radius: 5px;
   position: relative;
   z-index: 1;
-  background: inherit;
-  /* overflow: hidden; */
+  background: #FFF;
+  overflow: hidden;
 }
 
-.container:before {
+.budget:before {
   content: "";
   position: absolute;
-  background: inherit;
+  background: #fff;
   z-index: -1;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  box-shadow: inset 0 0 2000px  rgb(236 173 184);
   filter: blur(10px);
   margin: -20px;
-}
+} */
 
 .budget{
     position: absolute;
     width: 360px;
     height: 250px;
-    top: 20%;
+    top: 25%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    background-color: #34006a;
+    background-color: #EDADB8;
+    border-radius: 30px 30px 0 0;
+    box-shadow:0px 0px 9px 10px #adb5bd;
 } 
 
 .budget .app-title{
@@ -94,7 +99,7 @@ input[type=number] {
 }
 
 .budget-header .balance .title{
-    color: #FFF;
+    color: #000;
     font-size: 1em;
     font-family: 'Gilroy Bold';
 }
@@ -113,6 +118,10 @@ input[type=number] {
     line-height: 1.7em;
     text-align: center;
     
+}
+
+.chart img{
+    height: 30px;
 }
 
 .budget-header .wallet .income, .chart, .outcome{
@@ -141,13 +150,17 @@ input[type=number] {
 }
 
 /*/////////////   DASHBOARD    /////////////*/
+/* .active{
+    opacity: 1 !important;
+} */
 .dashboard{
     display: block;
     width: 360px;
-    height: 466px;
+    height: 366px;
     background-color: #FFF;
     /* margin-top: 35px; */
-    border-radius: 30px 30px 0 0;
+    border-radius: 9px 9px 0 0;
+    box-shadow: 0px 10px 9px 10px #adb5bd;
 }
 
 .dashboard .dashboard-title{
@@ -357,15 +370,15 @@ input[type=number] {
 
 /* /////// INCOME //////// */
 .dashboard #income{
-    width: 360px;
-    height: 339px;
+    width: 315px;
+    height: 215px;
     position: relative;
 }
 
 .dashboard #income .budget-input{
     position: absolute;
     display: block;
-    width: 360px;
+    width: 318px;
     bottom: 0;
     border-top: 1px solid #ccc;
 }
@@ -406,7 +419,7 @@ input[type=number] {
 }
 
 .dashboard #income ul{
-    width: 360px;
+    width: 350px;
     height: 265px;
     list-style: none;
     margin: 0;
