--- a/style.css
+++ b/style.css
@@ -65,6 +65,20 @@ input[type=number] {
   margin: -20px;
 } */
 
+.add-income img {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.budget-input {
+    position: absolute;
+    display: block;
+    /* width: 318px; */
+    bottom: 0;
+    border-top: 1px solid #ccc;
+}
+
 .budget{
     position: absolute;
     width: 300px;
@@ -265,9 +279,7 @@ input[type=number] {
     background-repeat: no-repeat;
 }
 
-/* .dashboard #all ul.list li.income{
-
-} */
+/*  */
 .dashboard #all ul.budget-list li.expense{
     color: #f0624d;
 }
